fix: alignment in cart page

--- a/src/pages/cart/components/cart-item/styles.module.css
+++ b/src/pages/cart/components/cart-item/styles.module.css
@@ -5,6 +5,7 @@
   padding: 1rem 0;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   width: 100%;
   max-width: 750px;
@@ -77,7 +78,7 @@
   }
 
   .CartItem__delete {
-    width: 100px;
+    width: min-content;
     font-size: 1.2rem;
   }
 }
